      environment variable after internal time zone changes (\PR{17724}).
      This makes results of datetime functions with this (typically
      unintentional) setting more predictable.

      \item \code{drop.terms(*)} now drops response as by default,
      \code{keep.response = FALSE}, fixing \PR{18564} thanks to Mikael Jagan.
    }
  }
}

\section{\Rlogo CHANGES IN R 4.3.2 patched}{
  
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{iconv()} now fixes up variant encoding names such as
      \code{"utf8"} case-insensitively.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item Some invalid \code{file} arguments to \code{pictex()},
      \code{postscript()} and \code{xfig()} opened a file called
      \samp{NA} rather than throw an error.  These included
      \code{postscript(NULL)} (which some people expected to work like
      \code{pdf(NULL)}).

      \item Passing \code{filename = NA} to \code{svg()}, \code{cairo_pdf()},
      \code{cairo_ps()} or the Cairo-based bitmap devices opened a file
      called \samp{NA}: it now throws an error.

      \item \code{quartz(file = NA)} opened a file called \samp{NA}, including
      when used as a Quartz-based bitmap device.  It now gives an error.

      \item \code{rank(<long vector>)} now works, fixing \PR{18617}, thanks to
      Ilia Kats.

      \item \code{seq.int()} did not adequately check its
      \code{length.out} argument.

      \item \code{match(<POSIXct>, .)} is correct again for differing time
      zones, ditto for \code{"POSIXlt"}, fixing \PR{18618} reported by
      Bastian Klein.

      \item \code{drop.terms(*, dropx=<0-length>)} now works, fixing
      \PR{18563} as proposed by Mikael Jagan.

      \item \code{drop.terms(*)} keeps \code{ + offset(.)} terms when it should,
      \PR{18565}, and \code{drop.terms()} no longer makes up a response,
      \PR{18566}, fixing both bugs thanks to Mikael Jagan.

      \item \code{getS3method("t", "test")} no longer finds the